# liqd-site

./: .editorconfig  .flake8  .gitignore  .stylelintrc  .stylelintrc.json  CHANGELOG.md  Makefile  README.md  lighthouse.mjs  manage.py  package.json  playwright.config.js  pyproject.toml  renovate.json  requirements.txt  webpack.common.js  webpack.config.babel.js  webpack.dev.js  webpack.prod.js
.github/workflows/: django.yml
apps/academy/: __init__.py  apps.py  blocks.py  choices.py  models.py
apps/blog/: apps.py  models.py
apps/core/: blocks.py  feed.py  models.py  wagtail_hooks.py
apps/images/: apps.py  models.py
apps/persons/: apps.py  models.py
apps/projects/: apps.py  blocks.py  models.py
blog/: models.py
blog/migrations/: 0001_initial.py  0002_auto_20150612_1151.py  0002_auto_20160401_1835.py  0003_auto_20160407_1910.py  0003_remove_blogpage_author.py  0004_blogpage_author.py  0005_auto_20160329_1630.py  0006_auto_20160329_1633.py  0007_auto_20160329_1653.py  0008_auto_20160329_1704.py  0009_auto_20160330_1603.py  0010_auto_20160401_1048.py  0011_auto_20160401_1127.py  (+1 more)
changelog/: #378.md  374.md  376.md  8014.md  8236.md  8254.md  8267.md  _0001.md  _0002.md  _0003.md  _0004.md  _0005.md  _0006.md  _0008.md  _0009.md  _1111.md
contrib/: transforms.py
core/: blocks.py  feed.py  models.py  translation.py
liquidsite/: urls.py
persons/: models.py
projects/: models.py  translation.py
requirements/: base.txt  dev.txt
scripts/: deploy.sh
streampage/: blocks.py  models.py  translation.py
website_wagtail/: urls.py  whitenoise.py  wsgi.py
(+401 files in other folders)
